# NewTradeBot

./: README.md  StrategyService.py  classtest2.py  config.txt  pyproject.toml  websocket_clients.py  websockets_server.py
webservice/: StrategyService.py  config.txt  trades.txt
webservice/templates/: home.html  index1.html
